route.tf
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.vpc_demo.id

  tags = {
    Name = "public-route"
  }
}

resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.vpc_demo.id

  tags = {
    Name = "Private-Route"
  }
}

resource "aws_route" "publi_route" {
  route_table_id         = aws_route_table.public_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
  depends_on             = [aws_internet_gateway.igw]
}

resource "aws_route_table_association" "public_rt_assoc" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "private_rt_assoc" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private_route_table.id
}
