subnet.tf
resource "aws_subnet" "public_subnet" {
  vpc_id                 = aws_vpc.vpc_demo.id
  cidr_block             = "192.168.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone      = "us-east-1a"


  tags = {
    Name = "public-subnet"
  }
}

resource "aws_subnet" "private_subnet" {
  vpc_id            = aws_vpc.vpc_demo.id
  cidr_block        = "192.168.2.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "Private-Subnet"
  }
}
